--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 			//有幾個項目就呼叫幾個 addChild
 			//addChild 要比 renderModal 先呼叫
 			so.addChild("繪製出 5 個畫面", 1, true);
-			so.addChild("回答問題", 1, false);
-			so.addChild("可按鍵選擇上 / 下一隻角色", 1, false);
-			so.addChild("讀取作業 2 儲存的座標點在眼睛上繪製出分割線", 1, false);
-			so.addChild("可選擇當下控制哪個虹膜", 1, false);
-			so.addChild("按滑鼠左鍵控制虹膜移動，右鍵停止", 2, false);
-			so.addChild("複製參數至對應目標參數", 2, false);
-			so.addChild("可儲存虹膜轉動角度", 1, false);
+			so.addChild("回答問題", 1, true);
+			so.addChild("可按鍵選擇上 / 下一隻角色", 1, true);
+			so.addChild("讀取作業 2 儲存的座標點在眼睛上繪製出分割線", 1, true);
+			so.addChild("可選擇當下控制哪個虹膜", 1, true);
+			so.addChild("按滑鼠左鍵控制虹膜移動，右鍵停止", 2, true);
+			so.addChild("複製參數至對應目標參數", 2, true);
+			so.addChild("可儲存虹膜轉動角度", 1, true);
 
 			//產生自評表，參數如下所示
 			so.renderModal(
